--- a/frontend/register.html
+++ b/frontend/register.html
@@ -33,7 +33,10 @@
 
     <div class="container mt-5">
       <h2>Registro</h2>
-      <form id="registerForm" onsubmit="event.preventDefault(); register();">
+      <form
+        id="registerForm"
+        onsubmit="event.preventDefault(); register(); clean();"
+      >
         <input
           type="text"
           id="reg_matricula"
@@ -72,8 +75,23 @@
         />
         <button type="submit" class="btn btn-primary">Registrarse</button>
       </form>
+      <div id="message" class="mt-3"></div>
     </div>
 
     <script src="app.js"></script>
+    <script>
+      function clean() {
+        document.getElementById("reg_matricula").value = "";
+        document.getElementById("nombre").value = "";
+        document.getElementById("apellido_paterno").value = "";
+        document.getElementById("apellido_materno").value = "";
+        document.getElementById("email").value = "";
+        document.getElementById("reg_contrasena").value = "";
+
+        const messageDiv = document.getElementById("message");
+        messageDiv.textContent =
+          "Registro completado. Todos los campos han sido borrados.";
+      }
+    </script>
   </body>
 </html>
