Componentes centrados e info agregada a paginas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Tec Spot</a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="login.html">Iniciar sesión</a>
+        <a class="nav-item nav-link" href="index.html">Iniciar sesión</a>
         <a class="nav-item nav-link" href="register.html">Registrarse</a>
         <a class="nav-item nav-link" href="getUser.html">Obtener Usuario</a>
         <a class="nav-item nav-link" href="reserva.html"
@@ -25,9 +25,6 @@
         >
         <a class="nav-item nav-link" href="estacionamientos.html"
           >Ver Estacionamientos</a
-        >
-        <a class="nav-item nav-link" href="modificarEstado.html"
-          >Modificar Estado Estacionamiento</a
         >
       </div>
     </nav>
