--- a/frontend/estacionamientos.html
+++ b/frontend/estacionamientos.html
@@ -14,7 +14,6 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Tec Spot</a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="register.html">Registrarse</a>
         <a class="nav-item nav-link" href="getUser.html">Obtener Usuario</a>
         <a class="nav-item nav-link" href="reserva.html"
           >Reservar Estacionamiento</a
@@ -25,13 +24,10 @@
         <a class="nav-item nav-link active" href="estacionamientos.html"
           >Ver Estacionamientos</a
         >
-        <a class="nav-item nav-link" href="modificarEstado.html"
-          >Modificar Estado Estacionamiento</a
-        >
       </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container mt-5 text-center">
       <h2>Estacionamientos</h2>
       <button onclick="getAllEstacionamientos();" class="btn btn-primary mb-3">
         Mostrar Todos los Estacionamientos
