--- a/frontend/getUser.html
+++ b/frontend/getUser.html
@@ -14,7 +14,6 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Tec Spot</a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="register.html">Registrarse</a>
         <a class="nav-item nav-link active" href="getUser.html"
           >Obtener Usuario</a
         >
@@ -27,18 +26,12 @@
         <a class="nav-item nav-link" href="estacionamientos.html"
           >Ver Estacionamientos</a
         >
-        <a class="nav-item nav-link" href="modificarEstado.html"
-          >Modificar Estado Estacionamiento</a
-        >
       </div>
     </nav>
 
     <div class="container mt-5">
       <h2>Obtener Usuario</h2>
-      <form
-        id="getUserForm"
-        onsubmit="event.preventDefault(); getUser(); clean();"
-      >
+      <form id="getUserForm" onsubmit="event.preventDefault(); getUser();">
         <input
           type="text"
           id="get_matricula"
@@ -48,18 +41,8 @@
         <button type="submit" class="btn btn-primary">Buscar Usuario</button>
       </form>
       <div id="userDetails" class="mt-4"></div>
-      <div id="message" class="mt-3"></div>
     </div>
 
     <script src="app.js"></script>
-
-    <script>
-      function clean() {
-        document.getElementById("get_matricula").value = "";
-        const messageDiv = document.getElementById("message");
-        messageDiv.textContent =
-          "Información del usuario obtenida exitosamente";
-      }
-    </script>
   </body>
 </html>
