--- a/frontend/register.html
+++ b/frontend/register.html
@@ -14,6 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Tec Spot</a>
       <div class="navbar-nav">
+        <a class="nav-item nav-link" href="index.html">Iniciar sesión</a>
         <a class="nav-item nav-link" href="register.html">Registrarse</a>
         <a class="nav-item nav-link" href="getUser.html">Obtener Usuario</a>
         <a class="nav-item nav-link" href="reserva.html"
@@ -24,9 +25,6 @@
         >
         <a class="nav-item nav-link" href="estacionamientos.html"
           >Ver Estacionamientos</a
-        >
-        <a class="nav-item nav-link" href="modificarEstado.html"
-          >Modificar Estado Estacionamiento</a
         >
       </div>
     </nav>
